billing-service/k8s/billing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: billing
  template:
    metadata:
      labels:
        app: billing
    spec:
      containers:
      - name: billing
        image: us-central1-docker.pkg.dev/lab-gcp-001/my-repo/billing-service:v0.4
        imagePullPolicy: Always
        ports:
        - name: http  
          containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
      - name: cloud-sql-proxy
        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.18.2
        args:
          - lab-gcp-001:us-central1:billing-sql
          - --credentials-file=/secrets/cloudsql/credentials.json
          - --port=3306
        volumeMounts:
          - name: cloudsql-creds
            mountPath: /secrets/cloudsql
            readOnly: true

      volumes:
      - name: cloudsql-creds
        secret:
          secretName: cloudsql-instance-credentials 
---
apiVersion: v1
kind: Service
metadata:
  name: billing-svc
  annotations:
    cloud.google.com/backend-config: '{"default": "billing-backendconfig"}'
spec:
  type: ClusterIP
  selector:
    app: billing
  ports:
  - name: http
    port: 80
    targetPort: 8080
