billing-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telecom-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: billing-svc
            port:
              number: 80
      - path: /healthz
        pathType: Exact
        backend:
          service:
            name: billing-svc
            port:
              number: 80
